# tinyusb-devel

./: Makefile  gpio.c  usb.c  usb.h  usb_bsp.h  usb_bsp_MDx.cpp
miosix/config/: Makefile.inc  miosix_settings.h
miosix/config/arch/cortexM4_stm32f4/stm32f411ve_stm32f4discovery/: board_settings.h
tinyusb/: meson.build
tinyusb/openrtx/: stm32f411xe.h  tusb_config.h
tinyusb/src/portable/st/synopsys/: dcd_synopsys.c
